--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -91,8 +91,9 @@
 
 .title {
     text-align    : left;
-    font          : normal normal 800 23px/28px Montserrat;
     letter-spacing: 0px;
     color         : #FFFFFF;
+    font-weight: bolder;
+    font-size: 23px;
 }
 
