ajuste na estrutura do codigo

--- a/src/app/pages/clientes/clientes.component.scss
+++ b/src/app/pages/clientes/clientes.component.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/breakpoints.scss";
+@import "../../../assets/scss/breakpoints.scss";
 
 .filter-table {
     width        : 100%;
