--- a/src/app/shared/register/form-client/form-client.component.html
+++ b/src/app/shared/register/form-client/form-client.component.html
@@ -15,7 +15,7 @@
                   >E-mail
                   <span
                     [ngClass]="
-                      form.controls['email']?.invalid ? 'required-star' : ''
+                      form.controls['email'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -36,7 +36,7 @@
                   >Repetir e-mail
                   <span
                     [ngClass]="
-                      form.controls['repetEmail']?.invalid
+                      form.controls['repetEmail'].invalid
                         ? 'required-star'
                         : ''
                     "
@@ -61,7 +61,7 @@
                   >Crie uma senha
                   <span
                     [ngClass]="
-                      form.controls['password']?.invalid ? 'required-star' : ''
+                      form.controls['password'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -82,7 +82,7 @@
                   >Repetir senha
                   <span
                     [ngClass]="
-                      form.controls['repetPassword']?.invalid
+                      form.controls['repetPassword'].invalid
                         ? 'required-star'
                         : ''
                     "
@@ -124,7 +124,7 @@
                   >Nome
                   <span
                     [ngClass]="
-                      form.controls['name']?.invalid ? 'required-star' : ''
+                      form.controls['name'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -145,7 +145,7 @@
                   >Sobrenome
                   <span
                     [ngClass]="
-                      form.controls['lastName']?.invalid ? 'required-star' : ''
+                      form.controls['lastName'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -166,7 +166,7 @@
                   >Sexo
                   <span
                     [ngClass]="
-                      form.controls['gender']?.invalid ? 'required-star' : ''
+                      form.controls['gender'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -185,7 +185,7 @@
                   >CPF
                   <span
                     [ngClass]="
-                      form.controls['cpf']?.invalid ? 'required-star' : ''
+                      form.controls['cpf'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -205,7 +205,7 @@
                 <label for="inputPhone" class="form-label"
                   >Telefone<span
                     [ngClass]="
-                      form.controls['phone']?.invalid ? 'required-star' : ''
+                      form.controls['phone'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -226,7 +226,7 @@
                   >Celular
                   <span
                     [ngClass]="
-                      form.controls['cell']?.invalid ? 'required-star' : ''
+                      form.controls['cell'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -246,7 +246,7 @@
                 <label for="inputbirth" class="form-label"
                   >Nascimento<span
                     [ngClass]="
-                      form.controls['birth']?.invalid ? 'required-star' : ''
+                      form.controls['birth'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -270,7 +270,7 @@
                   >CEP
                   <span
                     [ngClass]="
-                      form.controls['cep']?.invalid ? 'required-star' : ''
+                      form.controls['cep'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -291,7 +291,7 @@
                   >Rua
                   <span
                     [ngClass]="
-                      form.controls['street']?.invalid ? 'required-star' : ''
+                      form.controls['street'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -312,7 +312,7 @@
                   >Número
                   <span
                     [ngClass]="
-                      form.controls['number']?.invalid ? 'required-star' : ''
+                      form.controls['number'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -333,7 +333,7 @@
                   >Complemento
                   <span
                     [ngClass]="
-                      form.controls['complement']?.invalid
+                      form.controls['complement'].invalid
                         ? 'required-star'
                         : ''
                     "
@@ -355,7 +355,7 @@
                 <label for="inputReference" class="form-label"
                   >Referência<span
                     [ngClass]="
-                      form.controls['reference']?.invalid ? 'required-star' : ''
+                      form.controls['reference'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -376,7 +376,7 @@
                   >Bairro
                   <span
                     [ngClass]="
-                      form.controls['neighborhood']?.invalid
+                      form.controls['neighborhood'].invalid
                         ? 'required-star'
                         : ''
                     "
@@ -399,7 +399,7 @@
                 <label for="inputCity" class="form-label"
                   >Cidade<span
                     [ngClass]="
-                      form.controls['city']?.invalid ? 'required-star' : ''
+                      form.controls['city'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
@@ -419,7 +419,7 @@
                 <label for="inputstate" class="form-label-select"
                   >Estado<span
                     [ngClass]="
-                      form.controls['state']?.invalid ? 'required-star' : ''
+                      form.controls['state'].invalid ? 'required-star' : ''
                     "
                   >
                     *</span
