--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/breakpoints.scss";
+@import "../../../assets/scss/breakpoints.scss";
 
 .card-infos {
     display        : flex;
