fix estrutura part2

--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/breakpoints.scss";
+@import "../../../assets/scss/breakpoints.scss";
 
 .login-place {
     background: #270F44 0% 0% no-repeat padding-box;
