--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
       <div class="select-year">
         2022
         <span class="select">
-          <img src="/assets/img/chevron-down.png" alt="" />
+          <img src="/assets/img/chevron-down.PNG" alt="" />
         </span>
       </div>
     </div>
