--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/breakpoints.scss";
+@import "../../../../assets/scss/breakpoints.scss";
 form {
     width: 384px;
     
