--- a/src/app/shared/register/form-client/form-client.component.html
+++ b/src/app/shared/register/form-client/form-client.component.html
@@ -394,7 +394,7 @@
                   />
                 </div>
               </div>
-              <div class="form-style-mobile"> 
+              <div class="form-style"> 
                <div class="mb-3 d-flex ">
                 <label for="inputCity" class="form-label-gg"
                   >Cidade<span
